--- a/index.html
+++ b/index.html
@@ -29,38 +29,9 @@
     
     <!-- Use comments like these to remove any courses that you have not yet taken.  Make sure to delete any projects you aren't putting in. -->
   
-    <h3>Computational Art Projects</h3><br>
-    <div class="row">
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
-      </div>
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
-      </div>
-    </div>
-  </div><br>
-  
-  <div class="container-fluid bg-3 text-center">    
-    <h3>Exploring Computer Science Projects</h3><br>
-    <div class="row">
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
-      </div>
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
-      </div>
-    </div>
-  </div><br>
+   
 
-  <div class="container-fluid bg-3 text-center">    
+<!--   <div class="container-fluid bg-3 text-center">    
     <h3>Designing Software for the Web Projects</h3><br>
     <div class="row">
       <div class="col-sm">
@@ -76,7 +47,7 @@
         <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
       </div>
     </div>
-  </div><br>
+  </div><br> -->
 
   <div class="container-fluid bg-3 text-center">    
     <h3>AP Computer Science A Projects</h3><br>
@@ -94,7 +65,7 @@
     </div>
   </div><br>
 
-  <div class="container-fluid bg-3 text-center">    
+<!--   <div class="container-fluid bg-3 text-center">    
     <h3>iOS Mobile Programming Projects</h3><br>
     <div class="row">
       <div class="col-sm">
@@ -112,17 +83,9 @@
         <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
       </div>
     </div>
-  </div><br>
+  </div><br> -->
 
-  <div class="container-fluid bg-3 text-center">    
-    <h3>CS Academy Service Learning Project</h3><br>
-    <div class="row">
-      <div class="col-sm">
-        <h4>Project Title</h4>
-        <p><a href="replit.com">Link to project</a></p>
-        <p>Write a description of your project and the process of developing it as a team here.  Also state what skills or knowledge you acquired during the process.</p>
-      </div>
-    </div><br>
+
   
   <div class="container-fluid bg-3 text-center">    
     <h3>Other Projects</h3><br>
