--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h3>AP Computer Science A Projects</h3><br>
     <div class="row">
       <div class="col-sm">
-        <h4>Project Title</h4>
+        <h4>Avoid the Enemies</h4>
         <p><a href="p5js.org"><iframe src="https://editor.p5js.org/iventuranoe64/full/7Qe3uaIRV"></iframe></a></p>
         <p>Move around to avoid the enemies.</p>
       </div>
