--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <body>
   <div class="container-fluid bg-3 text-center">    
-    <h1>Your Name's CS Project Portfolio</h1>      
-    <p>Write a few sentences about you.  What are your interests and passions?  What do you like about CS?  What are your strengths?  Market yourself to future employers/funders.  Remember to proofread your writing.</p>
+    <h1>Noe's CS Project Portfolio</h1>      
+    <p>I didnt kknow taking my first CS class that I would end up enjoying it. It opened a new wrold for me that I knew so little about.</p>
     
     <!-- Use comments like these to remove any courses that you have not yet taken.  Make sure to delete any projects you aren't putting in. -->
   
