--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="col-sm">
         <h4>Avoid the Enemies</h4>
-        <p><a href="p5js.org"><iframe src="https://editor.p5js.org/iventuranoe64/full/7Qe3uaIRV"></iframe></a></p>
+        <p><a href="p5js.org">https://editor.p5js.org/iventuranoe64/full/7Qe3uaIRV</a></p>
         <p>Move around to avoid the enemies.</p>
       </div>
       <div class="col-sm">
