--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   
    
 
-<!--   <div class="container-fluid bg-3 text-center">    
-    <h3>Designing Software for the Web Projects</h3><br>
+<div class="container-fluid bg-3 text-center">    
+    <h3>Comp Art</h3><br>
     <div class="row">
       <div class="col-sm">
         <h4>Project Title</h4>
-        <p><a href="replit.com">Link to code on GitHub</a></p>
-        <p><a href="replit.com">Website</a></p>
-        <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
+        <p><a href="https://github.com/SBHS-Computer-Science-Academy/APCS-24-25-projects-for-showcase/tree/main/JadenLuisMaxNoe">Link to code on GitHub</a></p>
+        <p><a href="https://sbhs-computer-science-academy.github.io/APCS-24-25-projects-for-showcase/JadenLuisMaxNoe/">Website</a></p>
+        <p>Its just BlackJack</p>
       </div>
       <div class="col-sm">
         <h4>Project Title</h4>
@@ -47,7 +47,7 @@
         <p>Write a description of your project here.  Also state what skills or knowledge it demonstrates.</p>
       </div>
     </div>
-  </div><br> -->
+  </div><br>
 
   <div class="container-fluid bg-3 text-center">    
     <h3>AP Computer Science A Projects</h3><br>
